footer gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -449,12 +449,11 @@ footer {
   display: flex;
   flex-direction: column;
   width: 33%;
-  padding: 20px 20px;
-  gap: 15px;
+  padding: 20px 20px; 
 }
 
 footer li {
-  margin-bottom: 15px;
+  margin-top: 15px;
   font-size: 16px;
 }
 
